--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <main>
       <h1>Tic Tac Toe</h1>
+      <p id="turn-info">O Score: 0 | X Score: 0 | Next: O</p>
       <div class="container">
         <div class="game">
           <button class="box"></button>
